[gd_scene load_steps=10 format=3 uid="uid://dkqdwnluyqrxq"]

[ext_resource type="Script" path="res://scripts/password_menu.gd" id="1_fidvr"]
[ext_resource type="Texture2D" uid="uid://bjafhla5xri5h" path="res://assets/Assets/menu_password.png" id="1_yfv45"]
[ext_resource type="FontFile" uid="uid://sti76lvwn4sm" path="res://assets/Fonts/Minecraft.ttf" id="2_638kl"]
[ext_resource type="FontFile" uid="uid://dcqs2gl3278ny" path="res://assets/Fonts/DS-DIGII.TTF" id="3_uu3m0"]
[ext_resource type="Theme" uid="uid://v7a6cjny7c2t" path="res://assets/Fonts/botoes_interfone.tres" id="5_33bgj"]
[ext_resource type="FontFile" uid="uid://bctqnnldliief" path="res://assets/simpletix.otf" id="5_d7o1w"]
[ext_resource type="AudioStream" uid="uid://bwk0sg15ytcrx" path="res://sons/sound_buttom.mp3" id="7_twyv8"]
[ext_resource type="AudioStream" uid="uid://ddcafm4r7400p" path="res://sons/correct-password.mp3" id="8_8qy6o"]
[ext_resource type="AudioStream" uid="uid://dfrwduwmwwvet" path="res://sons/typing-wrong-password.mp3" id="9_4n4cg"]

[node name="password_menu" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_fidvr")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.254902)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(931.594, 520)
scale = Vector2(14.6689, 14.2793)
texture = ExtResource("1_yfv45")

[node name="password_screen" type="Label" parent="."]
texture_filter = 2
offset_left = 678.0
offset_top = 173.0
offset_right = 1200.0
offset_bottom = 457.0
theme_override_fonts/font = ExtResource("3_uu3m0")
theme_override_font_sizes/font_size = 140
text = "0000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="exit_button" type="Button" parent="."]
offset_left = 1765.0
offset_top = 46.0
offset_right = 1854.0
offset_bottom = 138.0
theme_override_colors/font_color = Color(0.917647, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_d7o1w")
theme_override_font_sizes/font_size = 50
text = "X"

[node name="Button_1" type="Button" parent="."]
texture_filter = 2
offset_left = 698.0
offset_top = 555.0
offset_right = 765.0
offset_bottom = 622.0
theme = ExtResource("5_33bgj")
theme_override_fonts/font = ExtResource("2_638kl")
theme_override_font_sizes/font_size = 40
text = "1"
flat = true

[node name="Button_2" type="Button" parent="."]
texture_filter = 2
offset_left = 903.0
offset_top = 551.0
offset_right = 975.0
offset_bottom = 625.0
theme = ExtResource("5_33bgj")
theme_override_fonts/font = ExtResource("2_638kl")
theme_override_font_sizes/font_size = 40
text = "2"
flat = true

[node name="Button_3" type="Button" parent="."]
texture_filter = 2
offset_left = 1104.0
offset_top = 550.0
offset_right = 1182.0
offset_bottom = 622.0
theme = ExtResource("5_33bgj")
theme_override_fonts/font = ExtResource("2_638kl")
theme_override_font_sizes/font_size = 40
text = "3"
flat = true

[node name="Button_4" type="Button" parent="."]
texture_filter = 2
offset_left = 697.0
offset_top = 698.0
offset_right = 766.0
offset_bottom = 757.0
theme = ExtResource("5_33bgj")
theme_override_fonts/font = ExtResource("2_638kl")
theme_override_font_sizes/font_size = 40
text = "4"
flat = true

[node name="Button_5" type="Button" parent="."]
texture_filter = 2
offset_left = 910.0
offset_top = 697.0
offset_right = 970.0
offset_bottom = 762.0
theme = ExtResource("5_33bgj")
theme_override_fonts/font = ExtResource("2_638kl")
theme_override_font_sizes/font_size = 40
text = "5"
flat = true

[node name="Button_6" type="Button" parent="."]
texture_filter = 2
offset_left = 1115.0
offset_top = 695.0
offset_right = 1178.0
offset_bottom = 764.0
theme = ExtResource("5_33bgj")
theme_override_fonts/font = ExtResource("2_638kl")
theme_override_font_sizes/font_size = 40
text = "6"
flat = true

[node name="Button_7" type="Button" parent="."]
texture_filter = 2
offset_left = 702.0
offset_top = 845.0
offset_right = 763.0
offset_bottom = 909.0
theme = ExtResource("5_33bgj")
theme_override_fonts/font = ExtResource("2_638kl")
theme_override_font_sizes/font_size = 40
text = "7"
flat = true

[node name="Button_8" type="Button" parent="."]
texture_filter = 2
offset_left = 914.0
offset_top = 845.0
offset_right = 971.0
offset_bottom = 907.0
theme = ExtResource("5_33bgj")
theme_override_fonts/font = ExtResource("2_638kl")
theme_override_font_sizes/font_size = 40
text = "8
"
flat = true

[node name="Button_9" type="Button" parent="."]
texture_filter = 2
offset_left = 1063.0
offset_top = 826.0
offset_right = 1205.0
offset_bottom = 893.0
theme_override_fonts/font = ExtResource("2_638kl")
flat = true

[node name="button_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_twyv8")
volume_db = -20.0

[node name="correct_password" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_8qy6o")

[node name="wrong_password" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_4n4cg")

[connection signal="pressed" from="exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Button_1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button_2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button_3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button_4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button_5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Button_6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="Button_7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="Button_8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="Button_9" to="." method="_on_button_9_pressed"]
